@@ -1,57 +1,16 @@
 plugins {
-    id 'java'
-    id "org.sonarqube" version "5.0.0.4638"
-    id 'org.springframework.boot' version "3.2.6"
-    id 'io.spring.dependency-management' version "1.1.5"
-    id "jacoco"
-}
-
-test {
-    useJUnitPlatform()
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    id "dolly-apps"
 }
 
 sonarqube {
     properties {
-        property "sonar.dynamicAnalysis", "reuseReports"
-        property "sonar.host.url", "https://sonarcloud.io"
-        property "sonar.java.coveragePlugin", "jacoco"
-        property "sonar.language", "java"
-        property "sonar.token", System.getenv("SONAR_TOKEN")
-        property "sonar.organization", "navikt"
-        property "sonar.project.monorepo.enabled", true
         property "sonar.projectKey", "testnav-pdl-forvalter"
         property "sonar.projectName", "testnav-pdl-forvalter"
-        property "sonar.sourceEncoding", "UTF-8"
     }
 }
-
-bootJar {
-    archiveFileName = "app.jar"
-}
-
-dependencyManagement {
-    applyMavenExclusions = false
-    imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2023.0.1'
-    }
-}
-
 
 properties {
     compileJava.options.encoding = 'UTF-8'
-}
-
-repositories {
-    mavenCentral()
-    mavenLocal()
-}
-
-
-java {
-    toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
-    }
 }
 
 dependencies {
@@ -64,20 +23,15 @@ dependencies {
     implementation 'no.nav.testnav.libs:security-core'
     implementation 'no.nav.testnav.libs:servlet-insecure-security'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
     implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'ma.glasnost.orika:orika-core:1.5.4'
 
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
     implementation 'io.swagger.core.v3:swagger-annotations-jakarta:2.2.21'
 
@@ -86,11 +40,5 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
 
-
-    implementation 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-
     testImplementation 'no.nav.testnav.libs:testing'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
